--- a/taste-of-everything/src/app/login/login.component.html
+++ b/taste-of-everything/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="uk-container-center">
     <main class="text-center">
         <form class="form-signin">
             <img class="mb-4 mt-4" src="../../assets/images/images.png" alt="" width="72" height="57">
