--- a/taste-of-everything/src/app/app.component.html
+++ b/taste-of-everything/src/app/app.component.html
@@ -1,50 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <img class="rounded-corners" src="../../assets/images/app-logo.jpg" alt="" width="60" height="50">
+            </a>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous">
-    </script>
-</head>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a routerLink="" class="nav-link px-2 text-secondary">Home</a></li>
+                <li><a routerLink="" class="nav-link px-2 text-white">Features</a></li>
+                <li><a routerLink="" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a routerLink="" class="nav-link px-2 text-white">About</a></li>
+            </ul>
 
-<body>
-    <header class="p-3 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img class="rounded-corners" src="../../assets/images/app-logo.jpg" alt="" width="60" height="50">
-                </a>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+            </form>
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a routerLink="" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a routerLink="" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a routerLink="" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a routerLink="" class="nav-link px-2 text-white">About</a></li>
-                </ul>
-
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                </form>
-
-                <div class="text-end">
-                    <a routerLink="/login" class="btn btn-outline-light me-2">Login</a>
-                    <a routerLink="/signup" class="btn btn-warning">Sign-up</a>
-                </div>
+            <div class="text-end">
+                <a routerLink="/login" class="btn btn-outline-light me-2">Login</a>
+                <a routerLink="/signup" class="btn btn-warning">Sign-up</a>
             </div>
+
+
+            <button type="button" class="btn btn-light text-primary mx-2 rounded-0" id="popcart" data-container="body" data-toggle="popover" data-placement="bottom" data-html="true" data-content="">
+        <i class="fa fa-shopping-cart "></i><b> Cart </b>(<span id="cart">0</span>)
+      </button>
         </div>
-    </header>
-
-    <div class="container-fluid justify-content-center">
-        <router-outlet></router-outlet>
     </div>
+</header>
 
-
-</body>
-
-</html>
+<div class="container-fluid justify-content-center">
+    <router-outlet></router-outlet>
+</div>
