--- a/taste-of-everything/src/app/login/login.component.html
+++ b/taste-of-everything/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="uk-container-center">
+<div class="container">
     <main class="text-center">
         <form class="form-signin">
             <img class="mb-4 mt-4" src="../../assets/images/images.png" alt="" width="72" height="57">
@@ -11,6 +11,16 @@
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
+            </div>
+            <div class="form-floating mb-3">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="customer">
+                    <label class="form-check-label" for="inlineRadio1">Customer</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="employee">
+                    <label class="form-check-label" for="inlineRadio2">Employee</label>
+                </div>
             </div>
             <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
