--- a/taste-of-everything/src/app/signup/signup.component.html
+++ b/taste-of-everything/src/app/signup/signup.component.html
@@ -5,7 +5,7 @@
             <h1 class="h3 mb-3 fw-normal">Create your Account</h1>
 
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Name</label>
             </div>
             <div class="form-floating mb-3">
@@ -13,26 +13,26 @@
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="password" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Password</label>
             </div>
 
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Contact</label>
             </div>
             <div class="form-floating mb-3">
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
                     <label class="form-check-label" for="inlineRadio1">Male</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
                     <label class="form-check-label" for="inlineRadio2">Female</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                    <label class="form-check-label" for="inlineRadio2">Other</label>
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="other">
+                    <label class="form-check-label" for="inlineRadio3">Other</label>
                 </div>
             </div>
             <!-- <button type="submit" class="btn btn-primary">Signup</button> -->
