--- a/taste-of-everything/src/app/login/login.component.html
+++ b/taste-of-everything/src/app/login/login.component.html
@@ -5,11 +5,11 @@
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" name="email" id="floatingInput" [(ngModel)]="customer.customerEmail">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" name="password" id="floatingPassword" [(ngModel)]="customer.customerPassword">
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating mb-3">
@@ -22,7 +22,7 @@
                     <label class="form-check-label" for="inlineRadio2">Employee</label>
                 </div>
             </div>
-            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary mt-3" (click)="checkValidCustomer()">Sign in</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
         </form>
     </main>
