--- a/taste-of-everything/src/app/customer-login/customer-login.component.html
+++ b/taste-of-everything/src/app/customer-login/customer-login.component.html
@@ -1,6 +1,4 @@
-<div class="container">
-    <main class="text-center">
-       <!-- <form class="form-signin" (ngSubmit)="(onSubmit(loginForm))" #loginForm="ngForm">
+ <form class="form-signin" (ngSubmit)="(onSubmit(loginForm))" #loginForm="ngForm">
             <img class="mb-4 mt-4" src="../../assets/images/images.png" alt="" width="72" height="57">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -20,7 +18,7 @@
                 <input type="password" class="form-control" name="password" id="floatingPassword" [(ngModel)]="customer.customerPassword" required>
                 <label for="floatingPassword">Password</label>
             </div>
-            <div class="form-floating mb-3">
+          <!--  <div class="form-floating mb-3">
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="customer" checked>
                     <label class="form-check-label" for="inlineRadio1">Customer</label>
@@ -29,11 +27,7 @@
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="employee">
                     <label class="form-check-label" for="inlineRadio2">Employee</label>
                 </div>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" routerLink="/employeedashboard">Sign in</button>
+            </div>-->
+            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" routerLink="/">Sign in</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2020–2021</p>
-        </form>-->
-        <button class="btn btn-primary" type="button"routerLink="/customerLogin">Customer</button>
-        <button class="btn btn-primary" type="button"routerLink="/employeeLogin">Employee</button>
-    </main>
-</div>
+        </form>
