--- a/taste-of-everything/src/app/app.component.html
+++ b/taste-of-everything/src/app/app.component.html
@@ -16,17 +16,17 @@
                 <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
             </form>
 
-            <div *ngIf="!service.isAuthenticated" class="text-end">
+            <div *ngIf="!customerService.isAuthenticated" class="text-end">
                 <a routerLink="/login" class="btn btn-outline-light me-2 ">Login</a>
                 <a routerLink="/signup" class="btn btn-warning ">Sign-up</a>
             </div>
 
-            <div *ngIf="service.isAuthenticated">
+            <div *ngIf="customerService.isCustomerLogin">
                 <button type="button " class="btn btn-light text-primary mx-2 rounded-0 " id="popcart " data-container="body " data-toggle="popover " data-placement="bottom " data-html="true " data-content=" ">
           <i class="fa fa-shopping-cart "></i><b> Cart </b>(<span id="cart ">0</span>)
         </button>
             </div>
-            <div *ngIf="service.isAuthenticated" class="text-end">
+            <div *ngIf="customerService.isAuthenticated" class="text-end">
                 <button (click)="logout()" class="btn btn-outline-light me-2 ">Log Out</button>
             </div>
         </div>
