--- a/taste-of-everything/src/app/component/category/category.component.html
+++ b/taste-of-everything/src/app/component/category/category.component.html
@@ -5,41 +5,15 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-4">
-            <div class="container mt-lg-5">
-                <main class="text-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://source.unsplash.com/1600x900/?icecream,food" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <a href="#" class="btn btn-primary">See</a>
-                        </div>
-                    </div>
-                </main>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="container mt-lg-5">
-                <main class="text-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://source.unsplash.com/1600x900/?food,apple" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <a href="#" class="btn btn-primary">See</a>
-                        </div>
-                    </div>
-                </main>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
+        <div class="col-sm-4" *ngFor="let category of categoryList">
             <div class="container mt-lg-5">
                 <main class="text-center">
                     <div class="card" style="width: 18rem;">
                         <img src="https://source.unsplash.com/1600x900/?paneer,food" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <a routerLink="/item" class="btn btn-primary">Click to see</a>
+                            <h5 class="card-title">{{category.categoryName}}</h5>
+                            <a routerLink="/item/{{category.categoryId}}" class="btn btn-primary">Click to
+                see</a>
                         </div>
                     </div>
                 </main>
