--- a/taste-of-everything/src/app/component/item/item.component.html
+++ b/taste-of-everything/src/app/component/item/item.component.html
@@ -5,41 +5,15 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4" *ngFor="let item of itemList">
             <div class="container mt-lg-5">
                 <main class="text-center">
                     <div class="card" style="width: 18rem;">
                         <img src="https://source.unsplash.com/1600x900/?icecream,food" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h3 class="card-title">{{item.itemName}}</h3>
+                            <h5 class="card-title">{{item.itemPrice}}</h5>
                             <a href="#" class="btn btn-primary">Add to Cart</a>
-                        </div>
-                    </div>
-                </main>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="container mt-lg-5">
-                <main class="text-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://source.unsplash.com/1600x900/?food,apple" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <a href="#" class="btn btn-primary">Add to Cart</a>
-                        </div>
-                    </div>
-                </main>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="container mt-lg-5">
-                <main class="text-center">
-                    <div class="card" style="width: 18rem;">
-                        <img src="https://source.unsplash.com/1600x900/?paneer,food" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <a routerLink="" class="btn btn-primary">Add to Cart</a>
                         </div>
                     </div>
                 </main>
@@ -47,7 +21,6 @@
         </div>
     </div>
 </div>
-
 <div class="container-fluid justify-content-center">
     <router-outlet></router-outlet>
 </div>
