--- a/taste-of-everything/src/app/component/login/login.component.html
+++ b/taste-of-everything/src/app/component/login/login.component.html
@@ -13,20 +13,20 @@
             </div>
 
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" name="email" id="floatingInput" [(ngModel)]="customer.customerEmail" #email="ngModel" [class.is-invalid]="email.invalid && email.touched" required>
+                <input type="email" class="form-control" name="email" id="floatingInput" [(ngModel)]="inputEmail" #email="ngModel" [class.is-invalid]="email.invalid && email.touched" required>
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" name="password" id="floatingPassword" [(ngModel)]="customer.customerPassword" required>
+                <input type="password" class="form-control" name="password" id="floatingPassword" [(ngModel)]="inputPassword" required>
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating mb-3">
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="customer" checked>
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" (click)="setType('customer')" checked>
                     <label class="form-check-label" for="inlineRadio1">Customer</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="employee">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" (click)="setType('employee')">
                     <label class="form-check-label" for="inlineRadio2">Employee</label>
                 </div>
             </div>
