--- a/taste-of-everything/src/app/component/category/category.component.html
+++ b/taste-of-everything/src/app/component/category/category.component.html
@@ -9,7 +9,7 @@
             <div class="container mt-lg-5">
                 <main class="text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://source.unsplash.com/1600x900/?paneer,food" class="card-img-top" alt="...">
+                        <img src="{{category.categoryImage}}" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">{{category.categoryName}}</h5>
                             <a routerLink="/item/{{category.categoryId}}" class="btn btn-primary">Click to
