--- a/taste-of-everything/src/app/component/employee/employee/employee.component.html
+++ b/taste-of-everything/src/app/component/employee/employee/employee.component.html
@@ -7,7 +7,7 @@
                         <img src="https://source.unsplash.com/1600x900/?icecream,food" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Category</h3>
-                            <a href="#" class="btn btn-primary">Category</a>
+                            <a routerLink="/employee/category" class="btn btn-primary">Category</a>
                         </div>
                     </div>
                 </main>
@@ -21,7 +21,7 @@
                         <img src="https://source.unsplash.com/1600x900/?food,food" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Item</h3>
-                            <a href="#" class="btn btn-primary">Item</a>
+                            <a routerLink="/employee/item" class="btn btn-primary">Item</a>
                         </div>
                     </div>
                 </main>
@@ -35,7 +35,7 @@
                         <img src="https://source.unsplash.com/1600x900/?tea,food" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">Change Order Status</h3>
-                            <a href="#" class="btn btn-primary">Order Status</a>
+                            <a routerLink="/employee/order" class="btn btn-primary">Order Status</a>
                         </div>
                     </div>
                 </main>
