--- a/taste-of-everything/src/app/component/employee-item/employee-item.component.html
+++ b/taste-of-everything/src/app/component/employee-item/employee-item.component.html
@@ -64,12 +64,13 @@
             <tr *ngFor="let item of itemList">
                 <td>{{item.itemId}}</td>
                 <td>{{item.itemName}}</td>
+                <td><img [src]="item.itemImage" class="img-thumbnail" alt="..." width="100px" height="100px"></td>
                 <td>₹{{item.itemPrice}}</td>
                 <td>{{item.category.categoryName}}</td>
-                <td><img [src]="item.itemImage" class="img-thumbnail" alt="..." width="100px" height="100px"></td>
+
                 <td><button type="button" class="btn btn-success mb-4" data-bs-toggle="modal" data-bs-target="#editItem">
             Edit</button></td>
-                <td><button type="button" class="btn btn-danger mb-4" data-bs-toggle="modal" data-bs-target="#deleteItem">
+                <td><button type="button" (click)="setItemId(item.itemId)" class="btn btn-danger mb-4" data-bs-toggle="modal" data-bs-target="#deleteItem">
             Delete</button></td>
             </tr>
         </tbody>
@@ -89,7 +90,7 @@
                     <p class="modal-title">Are you want to delete this category</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="deleteCategory()">Yes</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="deleteItem()">Yes</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
                 </div>
             </div>
@@ -101,25 +102,35 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add Category</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Add Item</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
 
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">Category Name</span>
-                        <input type="text" class="form-control" aria-label="Category Name" [(ngModel)]="category.categoryName" aria-describedby="basic-addon1">
+                        <span class="input-group-text" id="basic-addon1">Item Name</span>
+                        <input type="text" class="form-control" aria-label="Item Name" [(ngModel)]="item.itemName" aria-describedby="basic-addon1">
                     </div>
 
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">Category Image</span>
-                        <input type="text" class="form-control" aria-label="Category Image" [(ngModel)]="category.categoryImage" aria-describedby="basic-addon1">
+                        <span class="input-group-text" id="basic-addon1">Item Price</span>
+                        <input type="text" class="form-control" aria-label="Item Price" [(ngModel)]="item.itemPrice" aria-describedby="basic-addon1">
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Item Image</span>
+                        <input type="text" class="form-control" aria-label="Item Image" [(ngModel)]="item.itemImage" aria-describedby="basic-addon1">
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Category Id</span>
+                        <input type="text" class="form-control" aria-label="Category Id" [(ngModel)]="categoryId" aria-describedby="basic-addon1">
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addCategory()">Add</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addItem()">Add</button>
                 </div>
             </div>
         </div>
