--- a/taste-of-everything/src/app/component/order-history/order-history.component.html
+++ b/taste-of-everything/src/app/component/order-history/order-history.component.html
@@ -1,31 +1,32 @@
 <div class="container">
     <div class="container text-center mt-lg-5">
-        <h1 style="color:darkred">All Orders(Not delivered)</h1>
+        <h1 style="color:darkred">All Items</h1>
     </div>
 
     <table class="table table-dark table-hover">
         <thead>
             <tr>
                 <th scope="col">Order Id</th>
-                <th scope="col">Customer Name</th>
                 <th scope="col">Item Name</th>
                 <th scope="col">Item Image</th>
+                <th scope="col">Item Price</th>
+                <th scope="col">Category</th>
                 <th scope="col">Quantity</th>
+                <th scope="col">Address</th>
                 <th scope="col">Order Status</th>
-                <th scope="col"></th>
+            </tr>
         </thead>
         <tbody>
             <tr *ngFor="let order of orderList">
                 <td>{{order.orderId}}</td>
-                <td>{{order.customer.customerName}}</td>
                 <td>{{order.item.itemName}}</td>
                 <td><img [src]="order.item.itemImage" class="img-thumbnail" alt="..." width="100px" height="100px"></td>
+                <td>{{order.item.itemPrice}}</td>
+                <td>{{order.item.category.categoryName}}</td>
                 <td>{{order.quantity}}</td>
+                <td>{{order.address.address}}</td>
                 <td>{{order.orderStatus}}</td>
-                <td><button type="button" class="btn btn-success mb-4" (click)="changeOrderStatus(order)">Deliver</button></td>
-
             </tr>
         </tbody>
     </table>
-
 </div>
