--- a/taste-of-everything/src/app/component/order-history/order-history.component.html
+++ b/taste-of-everything/src/app/component/order-history/order-history.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="container text-center mt-lg-5">
-        <h1 style="color:darkred">All Items</h1>
+        <h1 style="color:darkred">Order History</h1>
     </div>
 
     <table class="table table-dark table-hover">
