--- a/taste-of-everything/src/app/component/employee-item/employee-item.component.html
+++ b/taste-of-everything/src/app/component/employee-item/employee-item.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="container text-center mt-lg-5">
-        <h1 style="color:darkred">All Items</h1>
+        <h1 style="color:darkred">Here is the List of all Items</h1>
     </div>
 
     <!-- Button trigger modal for Add Category -->
