--- a/taste-of-everything/src/app/component/order-status/order-status.component.html
+++ b/taste-of-everything/src/app/component/order-status/order-status.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="container text-center mt-lg-5">
-        <h1 style="color:darkred">All Orders(Not delivered)</h1>
+        <h1 style="color:darkred">Here is the order List!!!</h1>
     </div>
 
     <table class="table table-dark table-hover">
